# 3dRust

./: Cargo.toml  README.md  plans.txt
crates/corrosed_resources/: Cargo.toml
src/: TODO.txt  frag.glsl  input.rs  main.rs  vert.glsl
src/basic_components/: mod.rs
src/basic_components/camera/: mod.rs
src/basic_components/fly_camera/: mod.rs
src/basic_components/input/: mod.rs
src/basic_components/light/: mod.rs
src/basic_components/rendereable/: mod.rs
src/basic_components/transform/: mod.rs
src/camera/: mod.rs
src/ecs/: component.rs  entity.rs  mod.rs  worldinfo.rs
src/geometry/: mesh.rs  mod.rs  vertex.rs
src/graphic/: frag.glsl  vert.glsl  window.rs
