[package]
name = "game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
debug = true
[dependencies]
corrosed_graphic = { path = "crates\\corrosed_graphic" }
glfw = { version = "*" }
glam = { version = "*", features = ["fast-math"] }
gl = "*"
specs = "*"
mimalloc = "*"
once_cell = "*"
